# Elevador

./: .gitignore  CMakeLists.txt  Elevador_Simulacao  Makefile  Makefile:Zone.Identifier  README.md  elevador.xml  tests.sh
Elevador-main/: Elevador_Simulacao  Filosofo.h  Makefile  README.md  Usuario.cpp  elevador.xml
Elevador-main/inc/:  SensorPresenca.hpp  Andar.hpp  Controlador.hpp  SensorAndar.hpp  Usuario.hpp  UsuarioIA.hpp  Utility.h
Elevador-main/model/: elevador.xml
Elevador-main/src/: Controlador.cpp  SensorEstadoPorta.cpp  UsuarioIA.cpp  Utility.cpp  main.cpp
Testing/Temporary/: CTestCostData.txt
inc/:  SensorPresenca.hpp  Andar.hpp  Controlador.hpp  Filosofo.h  Filosofo.h:Zone.Identifier  Porta.hpp  SensorAndar.hpp  SensorEstadoPorta.hpp  SensorPresenca.hpp  Usuario.hpp  UsuarioIA.hpp  Utility.h
lcovdir/: my.info
lcovdir/result/: index-sort-f.html  index-sort-l.html  index.html
lcovdir/result/inc/: Controlador.hpp.func-sort-c.html  Controlador.hpp.func.html  Controlador.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
lcovdir/result/src/: Andar.cpp.func-sort-c.html  Andar.cpp.func.html  Andar.cpp.gcov.html  Controlador.cpp.func-sort-c.html  Controlador.cpp.func.html  Controlador.cpp.gcov.html  Porta.cpp.func-sort-c.html  Porta.cpp.func.html  Porta.cpp.gcov.html  SensorAndar.cpp.func-sort-c.html  SensorAndar.cpp.func.html  SensorAndar.cpp.gcov.html  SensorEstadoPorta.cpp.func-sort-c.html  SensorEstadoPorta.cpp.func.html  SensorEstadoPorta.cpp.gcov.html  SensorPresenca.cpp.func-sort-c.html  SensorPresenca.cpp.func.html  SensorPresenca.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
lcovdir/result/testes/: Andar_test.cc.func-sort-c.html  Andar_test.cc.func.html  Andar_test.cc.gcov.html  Controlador_test.cc.func-sort-c.html  Controlador_test.cc.func.html  Controlador_test.cc.gcov.html  Porta_test.cc.func-sort-c.html  Porta_test.cc.func.html  Porta_test.cc.gcov.html  SensorPresenca_test.cc.func-sort-c.html  SensorPresenca_test.cc.func.html  SensorPresenca_test.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html
lcovdir/result/usr/include/c++/9/: atomic.func-sort-c.html  atomic.func.html  atomic.gcov.html  index-sort-f.html  index-sort-l.html  index.html  new.func-sort-c.html  new.func.html  new.gcov.html  thread.func-sort-c.html  thread.func.html  thread.gcov.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html
lcovdir/result/usr/include/c++/9/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocator.h.func-sort-c.html  allocator.h.func.html  allocator.h.gcov.html  atomic_base.h.func-sort-c.html  atomic_base.h.func.html  atomic_base.h.gcov.html  basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-sort-c.html  char_traits.h.func.html  char_traits.h.gcov.html  cpp_type_traits.h.func-sort-c.html  cpp_type_traits.h.func.html  cpp_type_traits.h.gcov.html  deque.tcc.func-sort-c.html  deque.tcc.func.html  deque.tcc.gcov.html  index-sort-f.html  index-sort-l.html  index.html  invoke.h.func-sort-c.html  invoke.h.func.html  invoke.h.gcov.html  (+63 more)
lcovdir/results/: index-sort-f.html  index-sort-l.html  index.html
lcovdir/results/gtest/: gtest-message.h.func-sort-c.html  gtest-message.h.func.html  gtest-message.h.gcov.html  gtest-printers.h.func-sort-c.html  gtest-printers.h.func.html  gtest-printers.h.gcov.html  gtest.h.func-sort-c.html  gtest.h.func.html  gtest.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
lcovdir/results/gtest/internal/: gtest-internal.h.func-sort-c.html  gtest-internal.h.func.html  gtest-internal.h.gcov.html  gtest-port.h.func-sort-c.html  gtest-port.h.func.html  gtest-port.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
lcovdir/results/inc/: Controlador.hpp.func-sort-c.html  Controlador.hpp.func.html  Controlador.hpp.gcov.html  UsuarioIA.hpp.func-sort-c.html  UsuarioIA.hpp.func.html  UsuarioIA.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
lcovdir/results/src/: Andar.cpp.func-sort-c.html  Andar.cpp.func.html  Andar.cpp.gcov.html  Controlador.cpp.func-sort-c.html  Controlador.cpp.func.html  Controlador.cpp.gcov.html  Porta.cpp.func-sort-c.html  Porta.cpp.func.html  Porta.cpp.gcov.html  SensorAndar.cpp.func-sort-c.html  SensorAndar.cpp.func.html  SensorAndar.cpp.gcov.html  SensorEstadoPorta.cpp.func-sort-c.html  SensorEstadoPorta.cpp.func.html  SensorEstadoPorta.cpp.gcov.html  SensorPresenca.cpp.func-sort-c.html  SensorPresenca.cpp.func.html  SensorPresenca.cpp.gcov.html  UsuarioIA.cpp.func-sort-c.html  UsuarioIA.cpp.func.html  UsuarioIA.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
lcovdir/results/testes/: Andar_test.cc.func-sort-c.html  Andar_test.cc.func.html  Andar_test.cc.gcov.html  Controlador_test.cc.func-sort-c.html  Controlador_test.cc.func.html  Controlador_test.cc.gcov.html  Porta_test.cc.func-sort-c.html  Porta_test.cc.func.html  Porta_test.cc.gcov.html  SensorPresenca_test.cc.func-sort-c.html  SensorPresenca_test.cc.func.html  SensorPresenca_test.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html
lcovdir/results/usr/include/c++/9/: atomic.func-sort-c.html  atomic.func.html  atomic.gcov.html  index-sort-f.html  index-sort-l.html  index.html  new.func-sort-c.html  new.func.html  new.gcov.html  thread.func-sort-c.html  thread.func.html  thread.gcov.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html
model/: elevador.q  elevador.xml
src/: Andar.cpp  Andar_test.cc  Controlador.cpp  Filosofo.cpp  Filosofo.cpp:Zone.Identifier  Porta.cpp  SensorAndar.cpp  SensorPresenca.cpp  Usuario.cpp  UsuarioIA.cpp  Utility.cpp  main.cpp
temp/: Usuario.hpp  test.cpp  test.hpp
testes/: Andar_test.cc  Controlador_test.cc  Porta_test.cc  SensorAndar_test.cc  SensorEstadoPorta_test.cc  SensorPresenca_test.cc  UsuarioIA_test.cc  Utility_test.cc
(+156 files in other folders)
